# highlander-agent

./: README.md  index.html  requirements.txt  setup.cfg
highlander_agent/: config.cfg  logger.conf  rpc.py
highlander_agent/cmd/: c.py  j.py  launch.py  p.py  play.py  play2.py
highlander_agent/cmd/nodejs/hypervisor/: server.js  uimonitor.js
highlander_agent/common/: constants.py  log.py  util.py
highlander_agent/config/: primary_node_register.json  registration1.json  rpc_example.json  rules_template.json  secoundary_node_register.json
highlander_agent/engine/: agent.py  default_agent.py
highlander_agent/listener/: daemon.py  default_server.py  server.py
highlander_agent/monitor/: daemon.py  endpoint.py  hypervisor.py  instance.py  network.py
highlander_agent/monitor/lib/: network.py
highlander_agent/notifier/: send.py
highlander_agent/rpcclient/: api.py  client.py
highlander_agent/rpcserver/: daemon.py  default_server.py  endpoint.py  server.py
highlander_agent/rules/: instance.py
