[metadata]
name = message
version = 2015.12.1
summary = Highlander Monitoring Agent Project
description-file =
license = Apache License, Version 2.0
home-page = https://launchpad.net/highlander
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = aneesh puttur
author-email = aneesh.puttur@gmail.com

[files]
packages =
    highlander-agent

[entry_points]
console_scripts =
    highlander-agent = highlander_agent.cmd.launch:main




